--- a/directives-deepdive/src/app/app.component.html
+++ b/directives-deepdive/src/app/app.component.html
@@ -6,13 +6,51 @@
         (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
       <br><br>
       <ul class="list-group">
-        <li
-          class="list-group-item">
-        </li>
+        <!--<div *ngIf="!onlyOdd">
+          <li
+            class="list-group-item"
+            [ngStyle]="{backgroundColor: evenNumber % 2 !== 0 ? 'yellow' : 'transparent'}"
+            *ngFor="let evenNumber of evenNumbers">
+            {{ evenNumber }}
+          </li>
+        </div>-->
+        <div *appUnless="onlyOdd">
+          <li
+            class="list-group-item"
+            [ngStyle]="{backgroundColor: evenNumber % 2 !== 0 ? 'yellow' : 'transparent'}"
+            *ngFor="let evenNumber of evenNumbers">
+            {{ evenNumber }}
+          </li>
+        </div>
+        <div *ngIf="onlyOdd">
+          <li
+            class="list-group-item"
+            [ngClass]="{odd: oddNumber % 2 !== 0}"
+            [ngStyle]="{backgroundColor: oddNumber % 2 !== 0 ? 'yellow' : 'transparent'}"
+            *ngFor="let oddNumber of oddNumbers">
+            {{ oddNumber }}
+          </li>
+        </div>
+        <ng-template [ngIf]="onlyOdd">
+          <div>
+            <li
+              class="list-group-item"
+              [ngClass]="{odd: oddNumber % 2 !== 0}"
+              [ngStyle]="{backgroundColor: oddNumber % 2 !== 0 ? 'yellow' : 'transparent'}"
+              *ngFor="let oddNumber of oddNumbers">
+              {{ oddNumber }}
+            </li>
+          </div>
+        </ng-template>
       </ul>
-      <ng-template [ngIf]="onlyOdd">
-        <p>Only odd</p>
-      </ng-template>
+      <p appBasicHighlight>Style Me Please</p>
+      <p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'red'">Style Me Please</p>
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">Value is 5</p>
+        <p *ngSwitchCase="10">Value is 10</p>
+        <p *ngSwitchCase="100">Value is 100</p>
+        <p *ngSwitchDefault>Value is default</p>
+      </div>
     </div>
   </div>
 </div>
