--- a/food-recipe-shopping-app/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/food-recipe-shopping-app/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -8,7 +8,7 @@
                         type="submit" 
                         (click)="onSubmit()"
                         [disabled]="!recipeForm.valid">Save</button>
-                    <button class="btn btn-danger" type="button">Cancel</button>
+                    <button class="btn btn-danger" type="button" (click)="onCancel()">Cancel</button>
                 </div>
             </div>
             <div class="row">
@@ -31,13 +31,14 @@
                             type="text"
                             id="imagePath"
                             formControlName="imagePath"
-                            class="form-control">
+                            class="form-control"
+                            #imagePath>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <img src="" class="image-responsive">
+                    <img [src]="imagePath.value" class="image-responsive">
                 </div>
             </div>
             <div class="row">
@@ -73,7 +74,10 @@
                                 class="form-control">
                         </div>
                         <div class="col-xs-2">
-                            <button class="btn btn-danger">X</button>
+                            <button 
+                                type="button"
+                                class="btn btn-danger"
+                                (click)="onDeleteIngredient(i)">X</button>
                         </div>
                     </div> 
                     <hr>
