--- a/book-store/src/app/books/book-edit/book-edit.component.html
+++ b/book-store/src/app/books/book-edit/book-edit.component.html
@@ -29,8 +29,9 @@
                 <input type="text" class="form-control" formControlName="genre">
             </div>
             <div>
-                <button class="btn btn-success" type="submit">Add Book</button> |
-                <button class="btn btn-primary" type="button">Reset</button>
+                <button class="btn btn-success" type="submit">{{ editMode ? 'Update Book' : 'Add Book' }}</button> |
+                <button class="btn btn-primary" type="button" (click)="onResetForm()">Reset</button> |
+                <button class="btn btn-danger" type="button" (click)="onCancel()">Cancel</button>
             </div>
         </form>
     </div>
